Fix scholar link wrapping

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1246,6 +1246,10 @@
                 margin-bottom: 0;
             }
 
+            .author__urls--academic .author__scholar {
+                grid-column: 1 / -1;
+            }
+
             .author__urls--academic > li > a,
             .author__urls--academic > li > span {
                 font-size: 1.1em;
